force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/IFv2_TriggerLogicConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>To activate and  deactivate triggers in InsightFlow application version 2.0</description>
    <label>Trigger Logic Configuration</label>
    <pluralLabel>Trigger Logic Configurations</pluralLabel>
</CustomObject>