force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/fields/Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to activate or deactivate trigger.</description>
    <inlineHelpText>Please check this checkbox to deactivate a trigger.</inlineHelpText>
    <label>Deactivate</label>
    <type>Checkbox</type>
</CustomField>