force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/fields/IFv2_DeactivateTriggerLogic__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DeactivateTriggerLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to activate or deactivate trigger.</description>
    <inlineHelpText>Check this checkbox to deactivate a trigger.</inlineHelpText>
    <label>Deactivate Trigger Logic</label>
    <type>Checkbox</type>
</CustomField>