force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/fields/IFv2_TriggerName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TriggerName__c</fullName>
    <description>This is a trigger name for activating and deactivating logic</description>
    <inlineHelpText>Provide trigger name which you want to deactivate.</inlineHelpText>
    <label>TriggerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>