force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>This is used to specify the method name.</description>
    <inlineHelpText>Please enter the method name to deactivate</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>