force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/fields/TriggerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerName__c</fullName>
    <description>This is a trigger name for activating and deactivating logic</description>
    <inlineHelpText>Please enter the trigger name to deactivate.</inlineHelpText>
    <label>TriggerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>