force-app/main/default/objects/IFv2_TriggerLogicConfiguration__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Deactivate__c</columns>
    <columns>TriggerName__c</columns>
    <columns>MethodName__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>